# 123

./: pyproject.toml
Hometask_Django/: index 1.html  index2.html  index3.html  index4.html  main.py
Hometask_Django/forma_/: index 1.html  index2.html  index3.html  index4.html
