[tool.poetry]
name = "hometask"
version = "0.1.0"
description = ""
authors = ["Tanya <tatiana-psy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
add-15-05-23 = "^0.1.0"
AWS-Mage2Connector = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
